JN-7 fixed issues with LlvmFunctionEmitter, move ir domain to own folder, fix issue with invokedynamic